Script do collapsed de propostas com seta

--- a/Frontend/assets/styl/style.styl
+++ b/Frontend/assets/styl/style.styl
@@ -1,3 +1,22 @@
 @import 'nib'
 .propostas
 	background-color #dcdcdc
+	
+.sprite
+	background url("../img/sprite.png")
+	
+.close-clp
+	background-position -8px -49px
+	width 1.675em /* 22/16 */
+	height 1.0775em /* 15/16 */
+	
+.open
+	background-position -10px -15px
+	width 1.675em /* 22/16 */
+	height 1.0775em /* 15/16 */
+
+.bg-grey
+	background-color grey !important
+
+.ft-white
+	color #fff !important	
