--- a/Frontend/assets/styl/02-bootstrap-custom.styl
+++ b/Frontend/assets/styl/02-bootstrap-custom.styl
@@ -7,9 +7,13 @@
 .panel-heading
 	background-color #fff !important
 	padding 1.8em 1.6em !important
+	border-radius 0 !important
 
 .panel-group 
 	.panel + .panel
 		margin-top 1.1em !important
-	
+
+.panel-title
+	display inline-block 
+	color #777 !important
 
