--- a/Frontend/materials/partials/navegation.hbs
+++ b/Frontend/materials/partials/navegation.hbs
@@ -15,7 +15,7 @@
                     <a class="page-scroll" href="#about">About</a>
                 </li>
                 <li>
-                    <a class="page-scroll" href="#services">Services</a>
+                    <a class="page-scroll" href="#services">Propostas</a>
                 </li>
                 <li>
                     <a class="page-scroll" href="#portfolio">Portfolio</a>
