Mais propostas na página

--- a/Frontend/views/pages/index.hbs
+++ b/Frontend/views/pages/index.hbs
@@ -74,6 +74,66 @@ layout: default
                             </div>
                         </div>
                     </div>
+                    <div class="panel panel-default">
+                        <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseFour" aria-expanded="false" aria-controls="collapseFour">                                
+                            <div class="panel-heading clearfix" role="tab" id="proposta4">
+                                <h4 class="panel-title pull-left">
+                                    <strong>Proposta 4</strong>
+                                </h4>
+                                <div class="sprite close-clp pull-right"></div>
+                            </div>
+                        </a>
+                        <div id="collapseFour" class="panel-collapse collapse bg-grey" role="tabpanel" aria-labelledby="collapseFour">
+                            <div class="panel-body ft-white">
+                                Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
+                            </div>
+                        </div>
+                    </div>
+                    <div class="panel panel-default">
+                        <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseFive" aria-expanded="false" aria-controls="collapseFive">                                
+                            <div class="panel-heading clearfix" role="tab" id="proposta5">
+                                <h4 class="panel-title pull-left">
+                                    <strong>Proposta 5</strong>
+                                </h4>
+                                <div class="sprite close-clp pull-right"></div>
+                            </div>
+                        </a>
+                        <div id="collapseFive" class="panel-collapse collapse bg-grey" role="tabpanel" aria-labelledby="headingFive">
+                            <div class="panel-body ft-white">
+                                Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
+                            </div>
+                        </div>
+                    </div>
+                    <div class="panel panel-default">
+                        <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseSix" aria-expanded="false" aria-controls="collapseSix">                                
+                            <div class="panel-heading clearfix" role="tab" id="proposta6">
+                                <h4 class="panel-title pull-left">
+                                    <strong>Proposta 6</strong>
+                                </h4>
+                                <div class="sprite close-clp pull-right"></div>
+                            </div>
+                        </a>
+                        <div id="collapseSix" class="panel-collapse collapse bg-grey" role="tabpanel" aria-labelledby="headingSix">
+                            <div class="panel-body ft-white">
+                                Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
+                            </div>
+                        </div>
+                    </div>
+                    <div class="panel panel-default">
+                        <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseSeven" aria-expanded="false" aria-controls="collapseSeven">                                
+                            <div class="panel-heading clearfix" role="tab" id="proposta7">
+                                <h4 class="panel-title pull-left">
+                                    <strong>Proposta 7</strong>
+                                </h4>
+                                <div class="sprite close-clp pull-right"></div>
+                            </div>
+                        </a>
+                        <div id="collapseSeven" class="panel-collapse collapse bg-grey" role="tabpanel" aria-labelledby="headingSeven">
+                            <div class="panel-body ft-white">
+                                Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
