--- a/Frontend/materials/components/slider/slider.styl
+++ b/Frontend/materials/components/slider/slider.styl
@@ -3,3 +3,12 @@
 [data-component="Slider"]{
 	background-color:green;
 }
+.icon-left,
+.icon-right 
+	position absolute 
+	left 50%
+	top 50%
+	z-index 5
+	display inline-block
+	margin-top -10px
+	
