--- a/Frontend/views/pages/index.hbs
+++ b/Frontend/views/pages/index.hbs
@@ -35,7 +35,7 @@ layout: default
                                 <h4 class="panel-title pull-left">
                                     <strong>Proposta 1</strong>
                                 </h4>
-                                <div class="sprite close-clp pull-right"></div>
+                                <div class="sprite icon-bottom pull-right"></div>
                             </div>
                         </a>
                         <div id="collapseOne" class="panel-collapse collapse bg-grey" role="tabpanel" aria-labelledby="headingOne">
@@ -50,7 +50,7 @@ layout: default
                                 <h4 class="panel-title pull-left">
                                     <strong>Proposta 2</strong>
                                 </h4>
-                                <div class="sprite close-clp pull-right"></div>
+                                <div class="sprite icon-bottom pull-right"></div>
                             </div>
                         </a>
                         <div id="collapseTwo" class="panel-collapse collapse bg-grey" role="tabpanel" aria-labelledby="headingTwo">
@@ -65,7 +65,7 @@ layout: default
                                 <h4 class="panel-title pull-left">
                                     <strong>Proposta 3</strong>
                                 </h4>
-                                <div class="sprite close-clp pull-right"></div>
+                                <div class="sprite icon-bottom pull-right"></div>
                             </div>
                         </a>
                         <div id="collapseThree" class="panel-collapse collapse bg-grey" role="tabpanel" aria-labelledby="headingThree">
@@ -80,7 +80,7 @@ layout: default
                                 <h4 class="panel-title pull-left">
                                     <strong>Proposta 4</strong>
                                 </h4>
-                                <div class="sprite close-clp pull-right"></div>
+                                <div class="sprite icon-bottom pull-right"></div>
                             </div>
                         </a>
                         <div id="collapseFour" class="panel-collapse collapse bg-grey" role="tabpanel" aria-labelledby="collapseFour">
@@ -95,7 +95,7 @@ layout: default
                                 <h4 class="panel-title pull-left">
                                     <strong>Proposta 5</strong>
                                 </h4>
-                                <div class="sprite close-clp pull-right"></div>
+                                <div class="sprite icon-bottom pull-right"></div>
                             </div>
                         </a>
                         <div id="collapseFive" class="panel-collapse collapse bg-grey" role="tabpanel" aria-labelledby="headingFive">
@@ -110,7 +110,7 @@ layout: default
                                 <h4 class="panel-title pull-left">
                                     <strong>Proposta 6</strong>
                                 </h4>
-                                <div class="sprite close-clp pull-right"></div>
+                                <div class="sprite icon-bottom pull-right"></div>
                             </div>
                         </a>
                         <div id="collapseSix" class="panel-collapse collapse bg-grey" role="tabpanel" aria-labelledby="headingSix">
@@ -125,7 +125,7 @@ layout: default
                                 <h4 class="panel-title pull-left">
                                     <strong>Proposta 7</strong>
                                 </h4>
-                                <div class="sprite close-clp pull-right"></div>
+                                <div class="sprite icon-bottom pull-right"></div>
                             </div>
                         </a>
                         <div id="collapseSeven" class="panel-collapse collapse bg-grey" role="tabpanel" aria-labelledby="headingSeven">
