--- a/Frontend/assets/styl/02-bootstrap-custom.styl
+++ b/Frontend/assets/styl/02-bootstrap-custom.styl
@@ -16,4 +16,7 @@
 .panel-title
 	display inline-block 
 	color #777 !important
+@media (min-width: 768px)
+	.navbar-default
+		background-color #000 !important
 
