--- a/Frontend/materials/partials/navegation.hbs
+++ b/Frontend/materials/partials/navegation.hbs
@@ -29,7 +29,8 @@
     </div>
     <!-- /.container-fluid -->
 </nav>
-<header>
+
+<!-- <header>
     <div class="header-content">
         <div class="header-content-inner">
             <h1 id="homeHeading">Your Favorite Source of Free Bootstrap Themes</h1>
@@ -38,4 +39,4 @@
             <a href="#about" class="btn btn-primary btn-xl page-scroll">Find Out More</a>
         </div>
     </div>
-</header>
+</header> -->
