--- a/Frontend/assets/styl/style.styl
+++ b/Frontend/assets/styl/style.styl
@@ -1,9 +1,12 @@
 @import 'nib'
 .propostas
 	background-color #dcdcdc
-	
+
 .bg-grey
 	background-color grey !important
 
 .ft-white
-	color #fff !important	
+	color #fff !important
+
+.slider-img
+	min-width: 100%
