--- a/Frontend/materials/components/slider/index.hbs
+++ b/Frontend/materials/components/slider/index.hbs
@@ -10,27 +10,27 @@
   	<!-- Wrapper for slides -->
   	<div class="carousel-inner" role="listbox">
    		<div class="item active">
-      		<img src="Content/img/portfolio/fullsize/1.jpg" class="img-responsive" alt="imagem qualquer">
+      		<img src="Content/img/Danilo/Danilo1.jpg" class="img-responsive slider-img" alt="imagem qualquer">
       		<div class="carousel-caption">
-        		
+
       		</div>
     	</div>
     	<div class="item">
-      		<img src="Content/img/portfolio/fullsize/2.jpg" class="img-responsive" alt="imagem qualquer 2">
+      		<img src="Content/img/Danilo/Danilo2.jpg" class="img-responsive slider-img" alt="imagem qualquer 2">
       		<div class="carousel-caption">
-        			
+
       		</div>
     	</div>
     	<div class="item">
-      		<img src="Content/img/portfolio/fullsize/3.jpg" class="img-responsive" alt="imagem qualquer 3">
+      		<img src="Content/img/Danilo/Danilo4.jpg" class="img-responsive slider-img" alt="imagem qualquer 3">
       		<div class="carousel-caption">
-        			
+
       		</div>
     	</div>
     	<div class="item">
-      		<img src="Content/img/portfolio/fullsize/4.jpg" class="img-responsive" alt="imagem qualquer 4">
+      		<img src="Content/img/Danilo/Danilo7.jpg" class="img-responsive slider-img" alt="imagem qualquer 4">
       		<div class="carousel-caption">
-        			
+
       		</div>
     	</div>
   	</div>
