--- a/Frontend/materials/partials/navegation.hbs
+++ b/Frontend/materials/partials/navegation.hbs
@@ -1,4 +1,3 @@
-<div class="complete"></div>
 <nav id="mainNav" class="navbar navbar-default navbar-fixed-top">
     <div class="container-fluid">
         <!-- Brand and toggle get grouped for better mobile display -->
@@ -30,8 +29,8 @@
     </div>
     <!-- /.container-fluid -->
 </nav>
-
-<!-- <header>
+<!--
+<header>
     <div class="header-content">
         <div class="header-content-inner">
             <h1 id="homeHeading">Your Favorite Source of Free Bootstrap Themes</h1>
