--- a/Frontend/views/layouts/default.hbs
+++ b/Frontend/views/layouts/default.hbs
@@ -32,7 +32,7 @@
   <![endif]-->
   
 </head>
-<body class="layout-padrao">
+<body class="layout-padrao" id="page-top">
   {{>navegation}}
     {{>slider.index}}
 
