--- a/Frontend/assets/styl/02-bootstrap-custom.styl
+++ b/Frontend/assets/styl/02-bootstrap-custom.styl
@@ -23,3 +23,12 @@
 .navbar
 	margin-bottom 0 !important
 
+.embed-responsive-item	
+	position relative
+	top 0
+	bottom 0
+	left 0
+	width 100%
+	height 250px
+	border 0
+
