Ajustes na navbar, slider, sobre e propostas

--- a/Frontend/views/pages/index.hbs
+++ b/Frontend/views/pages/index.hbs
@@ -7,10 +7,10 @@ layout: default
     <div class="container">
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2 text-center">
-                <h2 class="section-heading">We've got what you need!</h2>
+                <h2 class="section-heading">Danilo Rodrigues</h2>
                 <hr class="light center-block">
-                <p class="text-faded">Start Bootstrap has everything you need to get your new website up and running in no time! All of the templates and themes on Start Bootstrap are open source, free to download, and easy to use. No strings attached!</p>
-                <a href="#services" class="page-scroll btn btn-default btn-xl sr-button">Get Started!</a>
+                <p class="text-faded">Sou bancário concursado pelo Banrisul, tenho 27 anos, casado e pai de dois filhos. Possuo formação em Educação Física e Mestrado, ambos pela UFPel. Moro no Fragata e tive grande parte da minha infância vivida na zona do Porto e com muito envolvimento na colônia de Pelotas. Fui artista circense e professor no grupo Tholl, coordenei projetos artísticos junto à UFPel e fui instrutor de artes no SESI. Coordenei o Programa de Ginástica Laboral da Prefeitura de Pelotas, com parcerias entre as instituições UFPel e Prefeitura. Hoje me proponho a ser teu representante na câmara municipal.<br><br><b><h3>“Não basta querer uma política melhor, é preciso lutar por ela!”</h3></b></p>
+                <!--<a href="#services" class="page-scroll btn btn-default btn-xl sr-button">Get Started!</a>-->
             </div>
         </div>
     </div>
@@ -26,111 +26,141 @@ layout: default
         </div>
    </div>
    <div class="container">
-        <div class="row">    
+        <div class="row">
             <div class="col-lg-12 col-md-12 text-center">
                 <div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
                     <div class="panel panel-default">
-                        <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseOne" aria-expanded="false" aria-controls="collapseOne">                                
+                        <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseOne" aria-expanded="false" aria-controls="collapseOne">
                             <div class="panel-heading clearfix" role="tab" id="proposta1">
                                 <h4 class="panel-title pull-left">
-                                    <strong>Proposta 1</strong>
+                                    <strong>Esporte e Arte como forma de educação</strong>
                                 </h4>
                                 <div class="sprite icon-bottom pull-right"></div>
                             </div>
                         </a>
                         <div id="collapseOne" class="panel-collapse collapse bg-grey" role="tabpanel" aria-labelledby="headingOne">
                             <div class="panel-body ft-white">
-                                Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
+                                <ol class="lista-proposta" align="justify">
+                                    <li>Lutar pela criação do Complexo Esportivo Municipal;</li>
+                                    <li>Incentivar o incremento do Programa PROESPORTE e fiscalizá-lo;</li>
+                                    <li>Buscar melhoras na segurança dos espaços públicos;</li>
+                                    <li>Ser um incentivador e combatente pelo retorno dos bons Carnavais;</li>
+                                    <li>Propor programas de incentivo a grupos artísticos locais permanentes.</li>
+                                </ol>
                             </div>
                         </div>
                     </div>
                     <div class="panel panel-default">
-                        <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">                                
+                        <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
                             <div class="panel-heading clearfix" role="tab" id="proposta2">
                                 <h4 class="panel-title pull-left">
-                                    <strong>Proposta 2</strong>
+                                    <strong>Educação</strong>
                                 </h4>
                                 <div class="sprite icon-bottom pull-right"></div>
                             </div>
                         </a>
                         <div id="collapseTwo" class="panel-collapse collapse bg-grey" role="tabpanel" aria-labelledby="headingTwo">
                             <div class="panel-body ft-white">
-                                Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
+                                <ol class="lista-proposta" align="justify">
+                                    <li>Lutar pela Educação em tempo integral (segundo turno escolar) com incentivo a atividades extra classes e alimentação;</li>
+                                    <li>Fomentar parcerias entre a Prefeitura de Pelotas e as Universidades locais, reduzindo a distância entre tais instituições, ao exemplo de fortalecimento de programas de estágios e pesquisas, além de projetos de ensino e extensão.</li>
+                                </ol>
                             </div>
                         </div>
                     </div>
                     <div class="panel panel-default">
-                        <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseThree" aria-expanded="false" aria-controls="collapseThree">                                
+                        <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
                             <div class="panel-heading clearfix" role="tab" id="proposta3">
                                 <h4 class="panel-title pull-left">
-                                    <strong>Proposta 3</strong>
+                                    <strong>Social e Comunitário</strong>
                                 </h4>
                                 <div class="sprite icon-bottom pull-right"></div>
                             </div>
                         </a>
                         <div id="collapseThree" class="panel-collapse collapse bg-grey" role="tabpanel" aria-labelledby="headingThree">
                             <div class="panel-body ft-white">
-                                Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
+                                <ol class="lista-proposta" align="justify">
+                                    <li>Ações de combate a intolerância religiosa e todo o tipo de discriminação;</li>
+                                    <li>Projetos em ação com as comunidades, através do incentivo ao regime de mutirões, fortalecendo as associações de bairros e parceria entre a comunidade e o poder público.</li>
+                                </ol>
                             </div>
                         </div>
                     </div>
                     <div class="panel panel-default">
-                        <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseFour" aria-expanded="false" aria-controls="collapseFour">                                
+                        <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
                             <div class="panel-heading clearfix" role="tab" id="proposta4">
                                 <h4 class="panel-title pull-left">
-                                    <strong>Proposta 4</strong>
+                                    <strong>Sustentabilidade, Meio Ambiente e Desenvolvimento</strong>
                                 </h4>
                                 <div class="sprite icon-bottom pull-right"></div>
                             </div>
                         </a>
                         <div id="collapseFour" class="panel-collapse collapse bg-grey" role="tabpanel" aria-labelledby="collapseFour">
                             <div class="panel-body ft-white">
-                                Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
+                                <ol class="lista-proposta" align="justify">
+                                    <li>Apoio as fontes de energia sustentáveis (inclusive na iluminação pública e órgãos municipais);</li>
+                                    <li>Conscientização e incentivo aos processos de seleção, separação e reciclagem do lixo, com base em projetos de sustentabilidade a curto e longo prazo;</li>
+                                    <li>Fortalecimento de associações de coletas e segregação de materiais recicláveis em cada bairro, apoiando cooperativas do ramo;</li>
+                                    <li>Cobrar e fiscalizar a implantação do aterro sanitário Municipal, reduzindo o custo com o transbordo para Candiota;</li>
+                                    <li>Incentivo ao deslocamento alternativo, como a utilização da bicicleta e da caminhada.</li>
+                                </ol>
                             </div>
                         </div>
                     </div>
                     <div class="panel panel-default">
-                        <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseFive" aria-expanded="false" aria-controls="collapseFive">                                
+                        <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseFive" aria-expanded="false" aria-controls="collapseFive">
                             <div class="panel-heading clearfix" role="tab" id="proposta5">
                                 <h4 class="panel-title pull-left">
-                                    <strong>Proposta 5</strong>
+                                    <strong>Apoio e valorização das potencialidades da colônia</strong>
                                 </h4>
                                 <div class="sprite icon-bottom pull-right"></div>
                             </div>
                         </a>
                         <div id="collapseFive" class="panel-collapse collapse bg-grey" role="tabpanel" aria-labelledby="headingFive">
                             <div class="panel-body ft-white">
-                                Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
+                                <ol class="lista-proposta" align="justify">
+                                    <li>Fortalecer o incentivo da prefeitura a produção agrícola local;</li>
+                                    <li>Propor o fundo de incentivo à produção rural, para os pequenos agricultores, a fim de reduzir o êxodo rural;</li>
+                                    <li>Apoio e incentivo ao fortalecimento do turismo e esporte colonial, a partir da utilização do Fundo Municipal do Turismo (a ser criado);</li>
+                                    <li>Incentivo a agricultura orgânica e disseminação a partir de um calendário de feiras nos bairros;</li>
+                                    <li>Auxiliar os pescadores cooperativados na comercialização dos pescados.</li>
+                                </ol>
                             </div>
                         </div>
                     </div>
                     <div class="panel panel-default">
-                        <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseSix" aria-expanded="false" aria-controls="collapseSix">                                
+                        <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseSix" aria-expanded="false" aria-controls="collapseSix">
                             <div class="panel-heading clearfix" role="tab" id="proposta6">
                                 <h4 class="panel-title pull-left">
-                                    <strong>Proposta 6</strong>
+                                    <strong>Empreendedorismo e geração de renda</strong>
                                 </h4>
                                 <div class="sprite icon-bottom pull-right"></div>
                             </div>
                         </a>
                         <div id="collapseSix" class="panel-collapse collapse bg-grey" role="tabpanel" aria-labelledby="headingSix">
                             <div class="panel-body ft-white">
-                                Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
+                                <ol class="lista-proposta" align="justify">
+                                    <li>Propor ações de estímulo ao empreendedorismo, com incentivo aos registros dos microempreendedores individuais, reduzindo ainda mais o mercado informal;</li>
+                                    <li>Fomentar o incentivo do setor industrial.</li>
+                                </ol>
                             </div>
                         </div>
                     </div>
                     <div class="panel panel-default">
-                        <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseSeven" aria-expanded="false" aria-controls="collapseSeven">                                
+                        <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseSeven" aria-expanded="false" aria-controls="collapseSeven">
                             <div class="panel-heading clearfix" role="tab" id="proposta7">
                                 <h4 class="panel-title pull-left">
-                                    <strong>Proposta 7</strong>
+                                    <strong>Serviço Público de Qualidade</strong>
                                 </h4>
                                 <div class="sprite icon-bottom pull-right"></div>
                             </div>
                         </a>
                         <div id="collapseSeven" class="panel-collapse collapse bg-grey" role="tabpanel" aria-labelledby="headingSeven">
                             <div class="panel-body ft-white">
-                                Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
+                                <ol class="lista-proposta" align="justify">
+                                    <li>Lutar pelo funcionalismo público, com postura contrária, a qualquer tipo de privatização, inclusive do SANEP;</li>
+                                    <li>Lutar pela criação de uma auditoria interna, com sistema de compliance, tanto para a Câmara quanto para o Executivo Municipal.</li>
+                                </ol>
                             </div>
                         </div>
                     </div>
