--- a/Frontend/materials/components/slider/index.hbs
+++ b/Frontend/materials/components/slider/index.hbs
@@ -5,12 +5,14 @@
     	<li data-target="#carousel-example-generic" data-slide-to="1"></li>
     	<li data-target="#carousel-example-generic" data-slide-to="2"></li>
     	<li data-target="#carousel-example-generic" data-slide-to="3"></li>
+        <li data-target="#carousel-example-generic" data-slide-to="4"></li>
+        <li data-target="#carousel-example-generic" data-slide-to="5"></li>
   	</ol>
 
   	<!-- Wrapper for slides -->
   	<div class="carousel-inner" role="listbox">
    		<div class="item active">
-      		<img src="Content/img/Danilo/Danilo1.jpg" class="img-responsive slider-img" alt="imagem qualquer">
+      		<img src="Content/img/Danilo/Danilo18.JPG" class="img-responsive slider-img" alt="imagem qualquer">
       		<div class="carousel-caption">
 
       		</div>
@@ -22,13 +24,25 @@
       		</div>
     	</div>
     	<div class="item">
-      		<img src="Content/img/Danilo/Danilo4.jpg" class="img-responsive slider-img" alt="imagem qualquer 3">
+      		<img src="Content/img/Danilo/Danilo17.jpg" class="img-responsive slider-img" alt="imagem qualquer 3">
       		<div class="carousel-caption">
 
       		</div>
     	</div>
     	<div class="item">
-      		<img src="Content/img/Danilo/Danilo7.jpg" class="img-responsive slider-img" alt="imagem qualquer 4">
+      		<img src="Content/img/Danilo/Danilo4.jpg" class="img-responsive slider-img" alt="imagem qualquer 4">
+      		<div class="carousel-caption">
+
+      		</div>
+    	</div>
+        <div class="item">
+      		<img src="Content/img/Danilo/Danilo1.jpg" class="img-responsive slider-img" alt="imagem qualquer 5">
+      		<div class="carousel-caption">
+
+      		</div>
+    	</div>
+        <div class="item">
+      		<img src="Content/img/Danilo/Danilo19.jpg" class="img-responsive slider-img" alt="imagem qualquer 6">
       		<div class="carousel-caption">
 
       		</div>
